chore: add some extra details

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,13 @@
 name = "decoreco"
 version = "0.1.0"
 edition = "2021"
+license = "CC0-1.0"
+description = "decode and re-encode big media files to save space"
+homepage = "https://github.com/Jabster28/decoreco"
+repository = "https://github.com/Jabster28/decoreco"
+readme = "README.md"
+keywords = ["ffmpeg", "decode", "encode", "re-encode", "compress", "decompress", "decoreco"]
+categories = ["multimedia", "video", "audio", "converter", "utility"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
