--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ homepage = "https://github.com/Jabster28/decoreco"
 repository = "https://github.com/Jabster28/decoreco"
 readme = "README.md"
 keywords = ["ffmpeg", "decode", "encode", "re-encode", "decoreco"]
-categories = ["multimedia", "video", "audio", "converter", "utility"]
+categories = ["multimedia"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
