--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "decoreco"
-version = "0.2.2"
+version = "0.2.3"
 edition = "2021"
 license = "CC0-1.0"
 description = "decode and re-encode big media files to save space"
@@ -15,8 +15,9 @@ categories = ["multimedia"]
 [dependencies]
 clap = "2.33.3"
 colored = "2.0.0"
-indicatif = "0.16.2"
-prettytable-rs = "0.8.0"
+indicatif = "0.17.7"
+prettytable-rs = "0.10.0"
 tempfile = "3.2.0"
 term_size = "0.3.2"
 man = "0.3.0"
+rayon = "1.7.0"
